# Hex

./: .gitignore  .gitmodules  CMakeLists.txt  Hex.jucer  OldCMakeLists.txt  create-files.py  readme.md  todos.md
Installers/: Hex.iss  Hex.pkgproj
Source/: BasicFragment.glsl  BasicVertex.glsl  Color.h  ComponentUtil.h  CustomLnF.cpp  CustomLnF.h  DAHDSR.cpp  DAHDSR.h  DebugUtil.cpp  DebugUtil.h  FMOperator.cpp  FMOperator.h  FMOscillator.cpp  FMOscillator.h  Filter.cpp  Filter.h  HexEditor.cpp  HexEditor.h  LFO.cpp  LFO.h  LfoComponent.cpp  LfoComponent.h  MathUtil.cpp  MathUtil.h  ModulationGrid.cpp  ModulationGrid.h  OperatorComponent.cpp  OperatorComponent.h  ParameterLayout.cpp  ParameterLayout.h  PatchBrowser.cpp  PatchBrowser.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.h  SliderLabel.cpp  SliderLabel.h  SymbolButton.cpp  (+5 more)
Source/tuning-library/include/: Tunings.h  TuningsImpl.h
design/: BottomLeft_Max.ai  EnvelopeComp_max.ai  FilterPanel_max.ai  FullLayout_max.ai  LFOPanel_Max.ai  OperatorComp_max.ai  PlaybackOff.ai  PlaybackOn.ai  RightBar_max.ai  UpperBar_max.ai  VerticalSlider.ai  WaveSelectorOff.ai  WaveSelectorOn.ai
plugin/: CMakeLists.txt
plugin/include/Hex/: BitmapWaveGraph.h  Color.h  CustomLnF.h  DAHDSR.h  DebugUtil.h  FMOperator.h  FMOscillator.h  FileSystem.h  Filter.h  HexEditor.h  HexHeader.h  HexState.h  Identifiers.h  LFO.h  LfoComponent.h  MathUtil.h  OperatorComponent.h  ParameterLayout.h  PatchBrowser.h  PluginEditor.h  PluginProcessor.h  RingBuffer.h  SliderLabel.h  SymbolButton.h  Synthesizer.h
plugin/include/Hex/Audio/: DAHDSR.h  FMOscillator.h  Filter.h  LFO.h  Synthesizer.h
plugin/include/Hex/GUI/: Assets.h  BitmapWaveGraph.h  Color.h  ComponentUtil.h  CustomLnF.h  EnvelopeComponent.h  Fonts.h  HexEditor.h  LfoComponent.h  ModulationGrid.h  OperatorComponent.h  SliderLabel.h  SymbolButton.h  UpperBar.h  WaveformSelector.h
plugin/source/: Assets.cpp  BitmapWaveGraph.cpp  CustomLnF.cpp  DAHDSR.cpp  DebugUtil.cpp  EnvelopeComponent.cpp  FMOperator.cpp  FMOscillator.cpp  FileSystem.cpp  Filter.cpp  Fonts.cpp  HexEditor.cpp  HexHeader.cpp  HexState.cpp  LFO.cpp  LfoComponent.cpp  ModulationGrid.cpp  OperatorComponent.cpp  PatchBrowser.cpp  PluginEditor.cpp  PluginProcessor.cpp  SliderLabel.cpp  SymbolButton.cpp  Synthesizer.cpp  UpperBar.cpp  WaveGraphComponent.cpp  WaveformSelector.cpp
